# rusty

./: package-lock.json  package.json
src/: App.module.scss  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pdf.rs
src-tauri/static/: README.md  test.txt
