[package]
name = "rusty-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["Roman Adamov"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-files = "0.6.2"
mime = "0.3.17"
pdf_form = "0.4.0"
lopdf = "0.31.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
